--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "highcharts": "^8.1.0",
+    "highcharts-vue": "^1.3.5",
+    "jqeury": "0.0.1-security",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -32,7 +35,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "warn"
+    }
   },
   "browserslist": [
     "> 1%",
