--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "highcharts": "^8.1.0",
-    "highcharts-vue": "^1.3.5",
-    "jqeury": "0.0.1-security",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -35,9 +32,7 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {
-      "no-unused-vars": "warn"
-    }
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
