--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-mixed-spaces-and-tabs": 0
+      "no-mixed-spaces-and-tabs": 0,
+      "no-unused-vars": "warn"
     }
   },
   "browserslist": [
